github_document added for Mixed Effect Model

--- a/Mixed Effect Models -- Orthodontic Growth Data/MixedEffectModel_Growth.Rmd
+++ b/Mixed Effect Models -- Orthodontic Growth Data/MixedEffectModel_Growth.Rmd
@@ -3,7 +3,7 @@ title: 'Linear Mixed Effect Model for Orthodontic Growth Data'
 author: "Pouria"
 date: "28 February, 2022"
 output:
-  pdf_document:
+  github_document:
     toc: true
 ---
 
